ANTLR/antlr4-runtime/SILParser.cpp

// Generated from d:\Programmes\Qt\Projets\SIL\SIL\ANTLR\SIL.g4 by ANTLR 4.7.1


#include "SILVisitor.h"

#include "SILParser.h"


using namespace antlrcpp;
using namespace antlr4;

SILParser::SILParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SILParser::~SILParser() {
  delete _interpreter;
}

std::string SILParser::getGrammarFileName() const {
  return "SIL.g4";
}

const std::vector<std::string>& SILParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SILParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

SILParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SILParser::Instruction_listContext* SILParser::FileContext::instruction_list() {
  return getRuleContext<SILParser::Instruction_listContext>(0);
}

tree::TerminalNode* SILParser::FileContext::EOF() {
  return getToken(SILParser::EOF, 0);
}

std::vector<tree::TerminalNode *> SILParser::FileContext::Newline() {
  return getTokens(SILParser::Newline);
}

tree::TerminalNode* SILParser::FileContext::Newline(size_t i) {
  return getToken(SILParser::Newline, i);
}


size_t SILParser::FileContext::getRuleIndex() const {
  return SILParser::RuleFile;
}

antlrcpp::Any SILParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

SILParser::FileContext* SILParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, SILParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(32);
      match(SILParser::Newline);
      break;
    }

    }
    setState(35);
    instruction_list();
    setState(37);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SILParser::Newline) {
      setState(36);
      match(SILParser::Newline);
    }
    setState(39);
    match(SILParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Instruction_listContext ------------------------------------------------------------------

SILParser::Instruction_listContext::Instruction_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SILParser::InstructionContext *> SILParser::Instruction_listContext::instruction() {
  return getRuleContexts<SILParser::InstructionContext>();
}

SILParser::InstructionContext* SILParser::Instruction_listContext::instruction(size_t i) {
  return getRuleContext<SILParser::InstructionContext>(i);
}

std::vector<tree::TerminalNode *> SILParser::Instruction_listContext::Newline() {
  return getTokens(SILParser::Newline);
}

tree::TerminalNode* SILParser::Instruction_listContext::Newline(size_t i) {
  return getToken(SILParser::Newline, i);
}

std::vector<tree::TerminalNode *> SILParser::Instruction_listContext::SEMICOLON() {
  return getTokens(SILParser::SEMICOLON);
}

tree::TerminalNode* SILParser::Instruction_listContext::SEMICOLON(size_t i) {
  return getToken(SILParser::SEMICOLON, i);
}


size_t SILParser::Instruction_listContext::getRuleIndex() const {
  return SILParser::RuleInstruction_list;
}

antlrcpp::Any SILParser::Instruction_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitInstruction_list(this);
  else
    return visitor->visitChildren(this);
}

SILParser::Instruction_listContext* SILParser::instruction_list() {
  Instruction_listContext *_localctx = _tracker.createInstance<Instruction_listContext>(_ctx, getState());
  enterRule(_localctx, 2, SILParser::RuleInstruction_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(41);
    dynamic_cast<Instruction_listContext *>(_localctx)->instructionContext = instruction();
    dynamic_cast<Instruction_listContext *>(_localctx)->instructions.push_back(dynamic_cast<Instruction_listContext *>(_localctx)->instructionContext);
    setState(46);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(42);
        _la = _input->LA(1);
        if (!(_la == SILParser::SEMICOLON

        || _la == SILParser::Newline)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(43);
        dynamic_cast<Instruction_listContext *>(_localctx)->instructionContext = instruction();
        dynamic_cast<Instruction_listContext *>(_localctx)->instructions.push_back(dynamic_cast<Instruction_listContext *>(_localctx)->instructionContext); 
      }
      setState(48);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

SILParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SILParser::BlockContext* SILParser::InstructionContext::block() {
  return getRuleContext<SILParser::BlockContext>(0);
}

SILParser::ActionContext* SILParser::InstructionContext::action() {
  return getRuleContext<SILParser::ActionContext>(0);
}


size_t SILParser::InstructionContext::getRuleIndex() const {
  return SILParser::RuleInstruction;
}

antlrcpp::Any SILParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

SILParser::InstructionContext* SILParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 4, SILParser::RuleInstruction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(52);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SILParser::L_BRACKET: {
        enterOuterAlt(_localctx, 1);
        setState(49);
        block();
        break;
      }

      case SILParser::FUNCTION:
      case SILParser::VAR:
      case SILParser::CONST:
      case SILParser::WHILE:
      case SILParser::OUT:
      case SILParser::IN:
      case SILParser::IF:
      case SILParser::TRUE:
      case SILParser::FALSE:
      case SILParser::PAUSE:
      case SILParser::RANDOM:
      case SILParser::NEWLINE:
      case SILParser::L_PAR:
      case SILParser::MINUS:
      case SILParser::INC:
      case SILParser::DEC:
      case SILParser::NOT:
      case SILParser::INTEGER_PART:
      case SILParser::Id:
      case SILParser::String: {
        enterOuterAlt(_localctx, 2);
        setState(50);
        action();
        break;
      }

      case SILParser::EOF:
      case SILParser::ELSE:
      case SILParser::R_BRACKET:
      case SILParser::SEMICOLON:
      case SILParser::Newline: {
        enterOuterAlt(_localctx, 3);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

SILParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SILParser::BlockContext::L_BRACKET() {
  return getToken(SILParser::L_BRACKET, 0);
}

SILParser::Instruction_listContext* SILParser::BlockContext::instruction_list() {
  return getRuleContext<SILParser::Instruction_listContext>(0);
}

tree::TerminalNode* SILParser::BlockContext::R_BRACKET() {
  return getToken(SILParser::R_BRACKET, 0);
}

std::vector<tree::TerminalNode *> SILParser::BlockContext::Newline() {
  return getTokens(SILParser::Newline);
}

tree::TerminalNode* SILParser::BlockContext::Newline(size_t i) {
  return getToken(SILParser::Newline, i);
}


size_t SILParser::BlockContext::getRuleIndex() const {
  return SILParser::RuleBlock;
}

antlrcpp::Any SILParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

SILParser::BlockContext* SILParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, SILParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(SILParser::L_BRACKET);
    setState(56);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(55);
      match(SILParser::Newline);
      break;
    }

    }
    setState(58);
    instruction_list();
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SILParser::Newline) {
      setState(59);
      match(SILParser::Newline);
    }
    setState(62);
    match(SILParser::R_BRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ActionContext ------------------------------------------------------------------

SILParser::ActionContext::ActionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SILParser::ActionContext::OUT() {
  return getToken(SILParser::OUT, 0);
}

SILParser::Expression_listContext* SILParser::ActionContext::expression_list() {
  return getRuleContext<SILParser::Expression_listContext>(0);
}

tree::TerminalNode* SILParser::ActionContext::PAUSE() {
  return getToken(SILParser::PAUSE, 0);
}

SILParser::If_elseContext* SILParser::ActionContext::if_else() {
  return getRuleContext<SILParser::If_elseContext>(0);
}

SILParser::While_loopContext* SILParser::ActionContext::while_loop() {
  return getRuleContext<SILParser::While_loopContext>(0);
}

SILParser::Variable_creationContext* SILParser::ActionContext::variable_creation() {
  return getRuleContext<SILParser::Variable_creationContext>(0);
}

SILParser::ExpressionContext* SILParser::ActionContext::expression() {
  return getRuleContext<SILParser::ExpressionContext>(0);
}


size_t SILParser::ActionContext::getRuleIndex() const {
  return SILParser::RuleAction;
}

antlrcpp::Any SILParser::ActionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitAction(this);
  else
    return visitor->visitChildren(this);
}

SILParser::ActionContext* SILParser::action() {
  ActionContext *_localctx = _tracker.createInstance<ActionContext>(_ctx, getState());
  enterRule(_localctx, 8, SILParser::RuleAction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SILParser::OUT: {
        enterOuterAlt(_localctx, 1);
        setState(64);
        match(SILParser::OUT);
        setState(65);
        expression_list();
        break;
      }

      case SILParser::PAUSE: {
        enterOuterAlt(_localctx, 2);
        setState(66);
        match(SILParser::PAUSE);
        break;
      }

      case SILParser::IF: {
        enterOuterAlt(_localctx, 3);
        setState(67);
        if_else();
        break;
      }

      case SILParser::WHILE: {
        enterOuterAlt(_localctx, 4);
        setState(68);
        while_loop();
        break;
      }

      case SILParser::VAR:
      case SILParser::CONST: {
        enterOuterAlt(_localctx, 5);
        setState(69);
        variable_creation();
        break;
      }

      case SILParser::FUNCTION:
      case SILParser::IN:
      case SILParser::TRUE:
      case SILParser::FALSE:
      case SILParser::RANDOM:
      case SILParser::NEWLINE:
      case SILParser::L_PAR:
      case SILParser::MINUS:
      case SILParser::INC:
      case SILParser::DEC:
      case SILParser::NOT:
      case SILParser::INTEGER_PART:
      case SILParser::Id:
      case SILParser::String: {
        enterOuterAlt(_localctx, 6);
        setState(70);
        expression(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Expression_listContext ------------------------------------------------------------------

SILParser::Expression_listContext::Expression_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SILParser::ExpressionContext *> SILParser::Expression_listContext::expression() {
  return getRuleContexts<SILParser::ExpressionContext>();
}

SILParser::ExpressionContext* SILParser::Expression_listContext::expression(size_t i) {
  return getRuleContext<SILParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> SILParser::Expression_listContext::COMMA() {
  return getTokens(SILParser::COMMA);
}

tree::TerminalNode* SILParser::Expression_listContext::COMMA(size_t i) {
  return getToken(SILParser::COMMA, i);
}


size_t SILParser::Expression_listContext::getRuleIndex() const {
  return SILParser::RuleExpression_list;
}

antlrcpp::Any SILParser::Expression_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitExpression_list(this);
  else
    return visitor->visitChildren(this);
}

SILParser::Expression_listContext* SILParser::expression_list() {
  Expression_listContext *_localctx = _tracker.createInstance<Expression_listContext>(_ctx, getState());
  enterRule(_localctx, 10, SILParser::RuleExpression_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SILParser::FUNCTION)
      | (1ULL << SILParser::IN)
      | (1ULL << SILParser::TRUE)
      | (1ULL << SILParser::FALSE)
      | (1ULL << SILParser::RANDOM)
      | (1ULL << SILParser::NEWLINE)
      | (1ULL << SILParser::L_PAR)
      | (1ULL << SILParser::MINUS)
      | (1ULL << SILParser::INC)
      | (1ULL << SILParser::DEC)
      | (1ULL << SILParser::NOT)
      | (1ULL << SILParser::INTEGER_PART)
      | (1ULL << SILParser::Id)
      | (1ULL << SILParser::String))) != 0)) {
      setState(73);
      dynamic_cast<Expression_listContext *>(_localctx)->expressionContext = expression(0);
      dynamic_cast<Expression_listContext *>(_localctx)->expressions.push_back(dynamic_cast<Expression_listContext *>(_localctx)->expressionContext);
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SILParser::COMMA) {
        setState(74);
        match(SILParser::COMMA);
        setState(75);
        dynamic_cast<Expression_listContext *>(_localctx)->expressionContext = expression(0);
        dynamic_cast<Expression_listContext *>(_localctx)->expressions.push_back(dynamic_cast<Expression_listContext *>(_localctx)->expressionContext);
        setState(80);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_elseContext ------------------------------------------------------------------

SILParser::If_elseContext::If_elseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SILParser::If_elseContext::IF() {
  return getToken(SILParser::IF, 0);
}

SILParser::ExpressionContext* SILParser::If_elseContext::expression() {
  return getRuleContext<SILParser::ExpressionContext>(0);
}

std::vector<SILParser::InstructionContext *> SILParser::If_elseContext::instruction() {
  return getRuleContexts<SILParser::InstructionContext>();
}

SILParser::InstructionContext* SILParser::If_elseContext::instruction(size_t i) {
  return getRuleContext<SILParser::InstructionContext>(i);
}

std::vector<tree::TerminalNode *> SILParser::If_elseContext::Newline() {
  return getTokens(SILParser::Newline);
}

tree::TerminalNode* SILParser::If_elseContext::Newline(size_t i) {
  return getToken(SILParser::Newline, i);
}

tree::TerminalNode* SILParser::If_elseContext::ELSE() {
  return getToken(SILParser::ELSE, 0);
}


size_t SILParser::If_elseContext::getRuleIndex() const {
  return SILParser::RuleIf_else;
}

antlrcpp::Any SILParser::If_elseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitIf_else(this);
  else
    return visitor->visitChildren(this);
}

SILParser::If_elseContext* SILParser::if_else() {
  If_elseContext *_localctx = _tracker.createInstance<If_elseContext>(_ctx, getState());
  enterRule(_localctx, 12, SILParser::RuleIf_else);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(SILParser::IF);
    setState(84);
    dynamic_cast<If_elseContext *>(_localctx)->if_condition = expression(0);
    setState(86);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(85);
      match(SILParser::Newline);
      break;
    }

    }
    setState(88);
    dynamic_cast<If_elseContext *>(_localctx)->if_instruction = instruction();
    setState(90);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      setState(89);
      match(SILParser::Newline);
      break;
    }

    }
    setState(97);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      setState(92);
      match(SILParser::ELSE);
      setState(94);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
      case 1: {
        setState(93);
        match(SILParser::Newline);
        break;
      }

      }
      setState(96);
      dynamic_cast<If_elseContext *>(_localctx)->else_instruction = instruction();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_loopContext ------------------------------------------------------------------

SILParser::While_loopContext::While_loopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SILParser::While_loopContext::WHILE() {
  return getToken(SILParser::WHILE, 0);
}

SILParser::ExpressionContext* SILParser::While_loopContext::expression() {
  return getRuleContext<SILParser::ExpressionContext>(0);
}

SILParser::InstructionContext* SILParser::While_loopContext::instruction() {
  return getRuleContext<SILParser::InstructionContext>(0);
}

tree::TerminalNode* SILParser::While_loopContext::Newline() {
  return getToken(SILParser::Newline, 0);
}


size_t SILParser::While_loopContext::getRuleIndex() const {
  return SILParser::RuleWhile_loop;
}

antlrcpp::Any SILParser::While_loopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitWhile_loop(this);
  else
    return visitor->visitChildren(this);
}

SILParser::While_loopContext* SILParser::while_loop() {
  While_loopContext *_localctx = _tracker.createInstance<While_loopContext>(_ctx, getState());
  enterRule(_localctx, 14, SILParser::RuleWhile_loop);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(SILParser::WHILE);
    setState(100);
    expression(0);
    setState(102);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      setState(101);
      match(SILParser::Newline);
      break;
    }

    }
    setState(104);
    instruction();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

SILParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SILParser::ExpressionContext::getRuleIndex() const {
  return SILParser::RuleExpression;
}

void SILParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Variable_moduloContext ------------------------------------------------------------------

tree::TerminalNode* SILParser::Variable_moduloContext::MOD_AFF() {
  return getToken(SILParser::MOD_AFF, 0);
}

std::vector<SILParser::ExpressionContext *> SILParser::Variable_moduloContext::expression() {
  return getRuleContexts<SILParser::ExpressionContext>();
}

SILParser::ExpressionContext* SILParser::Variable_moduloContext::expression(size_t i) {
  return getRuleContext<SILParser::ExpressionContext>(i);
}

SILParser::Variable_moduloContext::Variable_moduloContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any SILParser::Variable_moduloContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitVariable_modulo(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Atomic_valueContext ------------------------------------------------------------------

SILParser::AtomContext* SILParser::Atomic_valueContext::atom() {
  return getRuleContext<SILParser::AtomContext>(0);
}

SILParser::Atomic_valueContext::Atomic_valueContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any SILParser::Atomic_valueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitAtomic_value(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Function_callContext ------------------------------------------------------------------

SILParser::ExpressionContext* SILParser::Function_callContext::expression() {
  return getRuleContext<SILParser::ExpressionContext>(0);
}

tree::TerminalNode* SILParser::Function_callContext::L_PAR() {
  return getToken(SILParser::L_PAR, 0);
}

SILParser::Expression_listContext* SILParser::Function_callContext::expression_list() {
  return getRuleContext<SILParser::Expression_listContext>(0);
}

tree::TerminalNode* SILParser::Function_callContext::R_PAR() {
  return getToken(SILParser::R_PAR, 0);
}

SILParser::Function_callContext::Function_callContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any SILParser::Function_callContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitFunction_call(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Variable_multiplicationContext ------------------------------------------------------------------

tree::TerminalNode* SILParser::Variable_multiplicationContext::TME_AFF() {
  return getToken(SILParser::TME_AFF, 0);
}

std::vector<SILParser::ExpressionContext *> SILParser::Variable_multiplicationContext::expression() {
  return getRuleContexts<SILParser::ExpressionContext>();
}

SILParser::ExpressionContext* SILParser::Variable_multiplicationContext::expression(size_t i) {
  return getRuleContext<SILParser::ExpressionContext>(i);
}

SILParser::Variable_multiplicationContext::Variable_multiplicationContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any SILParser::Variable_multiplicationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitVariable_multiplication(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Unary_minusContext ------------------------------------------------------------------

tree::TerminalNode* SILParser::Unary_minusContext::MINUS() {
  return getToken(SILParser::MINUS, 0);
}

SILParser::ExpressionContext* SILParser::Unary_minusContext::expression() {
  return getRuleContext<SILParser::ExpressionContext>(0);
}

SILParser::Unary_minusContext::Unary_minusContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any SILParser::Unary_minusContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitUnary_minus(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CastContext ------------------------------------------------------------------

SILParser::ExpressionContext* SILParser::CastContext::expression() {
  return getRuleContext<SILParser::ExpressionContext>(0);
}

tree::TerminalNode* SILParser::CastContext::SEP() {
  return getToken(SILParser::SEP, 0);
}

tree::TerminalNode* SILParser::CastContext::TYPE() {
  return getToken(SILParser::TYPE, 0);
}

SILParser::CastContext::CastContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any SILParser::CastContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitCast(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NotContext ------------------------------------------------------------------

tree::TerminalNode* SILParser::NotContext::NOT() {
  return getToken(SILParser::NOT, 0);
}

SILParser::ExpressionContext* SILParser::NotContext::expression() {
  return getRuleContext<SILParser::ExpressionContext>(0);
}

SILParser::NotContext::NotContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any SILParser::NotContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SILVisitor*>(visitor))
    return parserVisitor->visitNot(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Addition_substractionContext ------------------------------------------------------------------
